// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component should allow expandable content: expandable content 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      actionsMenuAppendTo="inline"
      aria-label="t(curiosity-inventory.tableAriaLabel, {"appName":"Subscriptions"})"
      borders={true}
      canCollapseAll={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        [
          {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table "
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      onCollapse={[Function]}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        [
          {
            "cells": [
              {
                "title": "dolor",
              },
            ],
            "isOpen": false,
          },
          {
            "cells": [
              {
                "title": "",
              },
            ],
            "expandedContent": "dolor sit expandable content",
            "fullWidth": true,
            "parent": 0,
          },
          {
            "cells": [
              {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <TableBody />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow expandable content: expanded row 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      actionsMenuAppendTo="inline"
      aria-label="t(curiosity-inventory.tableAriaLabel, {"appName":"Subscriptions"})"
      borders={true}
      canCollapseAll={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        [
          {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table "
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      onCollapse={[Function]}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        [
          {
            "cells": [
              {
                "title": "dolor",
              },
            ],
            "isOpen": true,
          },
          {
            "cells": [
              {
                "title": "dolor sit expandable content",
              },
            ],
            "expandedContent": "dolor sit expandable content",
            "fullWidth": false,
            "parent": 0,
          },
          {
            "cells": [
              {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <TableBody />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow sortable content: sortable content 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      actionsMenuAppendTo="inline"
      aria-label="t(curiosity-inventory.tableAriaLabel, {"appName":"Subscriptions"})"
      borders={true}
      canCollapseAll={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        [
          {
            "onSort": [MockFunction],
            "title": "lorem ipsum",
            "transforms": [
              [Function],
            ],
          },
        ]
      }
      className="curiosity-table "
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      onSort={[Function]}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        [
          {
            "cells": [
              {
                "title": "dolor",
              },
            ],
          },
          {
            "cells": [
              {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      sortBy={{}}
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <TableBody />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow sortable content: sorted column callback 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      actionsMenuAppendTo="inline"
      aria-label="t(curiosity-inventory.tableAriaLabel, {"appName":"Subscriptions"})"
      borders={true}
      canCollapseAll={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        [
          {
            "onSort": [MockFunction] {
              "calls": [
                [
                  {
                    "direction": "asc",
                    "index": 0,
                    "label": undefined,
                  },
                ],
              ],
              "results": [
                {
                  "type": "return",
                  "value": undefined,
                },
              ],
            },
            "title": "lorem ipsum",
            "transforms": [
              [Function],
            ],
          },
        ]
      }
      className="curiosity-table "
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      onSort={[Function]}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        [
          {
            "cells": [
              {
                "title": "dolor",
              },
            ],
          },
          {
            "cells": [
              {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      sortBy={
        {
          "direction": "asc",
          "index": 0,
        }
      }
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <TableBody />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow variations in table layout: ariaLabel and summary 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      actionsMenuAppendTo="inline"
      aria-label="lorem ipsum aria-label"
      borders={false}
      canCollapseAll={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        [
          {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table-no-border "
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        [
          {
            "cells": [
              {
                "title": "dolor",
              },
            ],
          },
          {
            "cells": [
              {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="lorem ipsum summary"
      variant={null}
    >
      <TableBody />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow variations in table layout: borders and table header removed 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      actionsMenuAppendTo="inline"
      aria-label="t(curiosity-inventory.tableAriaLabel, {"appName":"Subscriptions"})"
      borders={false}
      canCollapseAll={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        [
          {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table-no-border "
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        [
          {
            "cells": [
              {
                "title": "dolor",
              },
            ],
          },
          {
            "cells": [
              {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableBody />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow variations in table layout: className and variant 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      actionsMenuAppendTo="inline"
      aria-label="lorem ipsum aria-label"
      borders={false}
      canCollapseAll={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        [
          {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table-no-border lorem-ipsum-class"
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        [
          {
            "cells": [
              {
                "title": "dolor",
              },
            ],
          },
          {
            "cells": [
              {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="lorem ipsum summary"
      variant="compact"
    >
      <TableBody />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should allow variations in table layout: generated rows 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      actionsMenuAppendTo="inline"
      aria-label="t(curiosity-inventory.tableAriaLabel, {"appName":"Subscriptions"})"
      borders={true}
      canCollapseAll={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        [
          {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table "
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={
        [
          {
            "cells": [
              {
                "title": "dolor",
              },
            ],
          },
          {
            "cells": [
              {
                "title": "sit",
              },
            ],
          },
        ]
      }
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <TableBody />
    </Table>
  </GridItem>
</Grid>
`;

exports[`Table Component should pass child components, nodes when there are no rows: children 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      actionsMenuAppendTo="inline"
      aria-label="t(curiosity-inventory.tableAriaLabel, {"appName":"Subscriptions"})"
      borders={true}
      canCollapseAll={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        [
          {
            "title": "lorem ipsum",
          },
        ]
      }
      className="curiosity-table "
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={[]}
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <TableBody />
    </Table>
    Loading...
  </GridItem>
</Grid>
`;

exports[`Table Component should render a non-connected component: non-connected 1`] = `
<Grid
  className="ins-inventory-list"
>
  <GridItem
    span={12}
  >
    <Table
      actionsMenuAppendTo="inline"
      aria-label="t(curiosity-inventory.tableAriaLabel, {"appName":"Subscriptions"})"
      borders={true}
      canCollapseAll={false}
      canSelectAll={true}
      canSortFavorites={true}
      cells={
        [
          {
            "title": "lorem",
          },
          {
            "title": "ipsum",
          },
          {
            "title": "dolor",
          },
          {
            "title": "sit",
          },
        ]
      }
      className="curiosity-table "
      collapseAllAriaLabel=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      isHeaderSelectDisabled={false}
      isNested={false}
      isStickyHeader={false}
      isTreeTable={false}
      ouiaSafe={true}
      role="grid"
      rowLabeledBy="simple-node"
      rows={[]}
      selectVariant="checkbox"
      summary="t(curiosity-inventory.tableSummary)"
      variant={null}
    >
      <TableHeader />
      <TableBody />
    </Table>
    <TableEmpty
      icon={[Function]}
      message="t(curiosity-inventory.tableEmptyInventoryMessage)"
      tableHeading="h2"
      title="t(curiosity-inventory.tableEmptyInventoryTitle)"
      variant="small"
    />
  </GridItem>
</Grid>
`;
